nav bar half work

--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
-<body>
-<h2>Hello World</h2>
+<body class="font-inter">
+    <header>
+        <nav>
+            <div class="nav-logo">
+                <img src="./assets/logo-navbar.png" alt="">
+            </div>
+            <ul>
+                <li><a href="">Features</a></li>
+                <li><a href="">How It Works</a></li>
+                <li><a href="">Why It's Different</a></li>
+            </ul>
+            <div>
+                <button>Get Early Access</button>
+            </div>
+        </nav>
+    </header>
+
 </body>
 </html>
