--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <div class="nav-logo">
                 <img src="./assets/logo-navbar.png" alt="">
             </div>
-            <ul>
+            <ul class="menu">
                 <li><a href="">Features</a></li>
                 <li><a href="">How It Works</a></li>
                 <li><a href="">Why It's Different</a></li>
             </ul>
             <div>
-                <button>Get Early Access</button>
+                <button class="btn">Get Early Access</button>
             </div>
         </nav>
     </header>
