--- a/index.html
+++ b/index.html
@@ -8,23 +8,57 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="font-inter">
     <header>
         <nav>
-            <div class="nav-logo">
+            <section class="nav-logo">
                 <img src="./assets/logo-navbar.png" alt="">
-            </div>
+            </section>
             <ul class="menu">
                 <li><a href="">Features</a></li>
                 <li><a href="">How It Works</a></li>
                 <li><a href="">Why It's Different</a></li>
             </ul>
-            <div>
+            <section>
                 <button class="btn">Get Early Access</button>
-            </div>
+            </section>
         </nav>
     </header>
+    <main>
+        <section class="banner">
+            <img src="./assets/hero-bg.png" alt="Hero Background" class="banner-bg-image">
 
+            <div class="banner-overlay"></div>
+            <div class="banner-content">
+                <div class="banner-top-text">
+                    <span>
+                        <i class="fa-regular fa-circle-dot"></i>
+                        Early Access Now Open
+                    </span>
+                </div>
+                <h1 class="banner-title-1">
+                    Structured Thinking,<br>
+                    <span class="banner-title-2">Not Just Note-Taking.</span>
+                </h1>
+                <p class="banner-text">
+                    A private place to save notes, links, and capture moments — designed to <br> help you think clearly, connect ideas, and turn learning into long-term knowledge.
+                </p>
+                <div class="banner-buttons">
+                    <button class="btn">
+                        <span>Start Building Your Vault</span>
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+
+                    <button class="btn2">
+                        <i class="fa-solid fa-play"></i>
+                        See How It Works
+                    </button>
+                </div>
+            </div>
+        </section>
+
+    </main>
 </body>
 </html>
