--- a/index.html
+++ b/index.html
@@ -58,6 +58,46 @@
                 </div>
             </div>
         </section>
+        
+        <section class="notes">
+            <div class="notes-container">
+                <div class="notes-header">
+                    <h2 class="notes-title">Notes Don't Fail, Structure Does.</h2>
+                    <p class="notes-subtitle">You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+                </div>
+                <div class="notes-cards">
+                    <div class="note-card">
+                        <div class="note-icon">
+                            <i class="fa-solid fa-layer-group"></i>
+                        </div>
+                        <h3 class="note-title">Scattered Notes</h3>
+                        <p class="note-description">Your ideas live in 10 different apps, none of them connected.</p>
+                    </div>
+                    <div class="note-card">
+                        <div class="note-icon">
+                            <i class="fa-solid fa-bookmark"></i>
+                        </div>
+                        <h3 class="note-title">Bookmark Overload</h3>
+                        <p class="note-description">Hundreds of saved links you'll never revisit or remember.</p>
+                    </div>
+                    <div class="note-card">
+                        <div class="note-icon">
+                            <i class="fa-solid fa-brain"></i>
+                        </div>
+                        <h3 class="note-title">No Idea Connections</h3>
+                        <p class="note-description">Insights stay isolated, never building into bigger understanding.</p>
+                    </div>
+                    <div class="note-card">
+                        <div class="note-icon">
+                            <i class="fa-solid fa-circle-info"></i>
+                        </div>
+                        <h3 class="note-title">Forgetting What You Learned</h3>
+                        <p class="note-description">Knowledge fades because there's no system to retain it.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
 
     </main>
 </body>
